--- a/main.css
+++ b/main.css
@@ -1,121 +1,44 @@
-
-html {
-    scroll-behavior: smooth;
+body, html {
+    height: 100%;
+    margin: 0;
+    font-family: 'Nunito', sans-serif;
 }
 
-body{font-family: 'Nunito', sans-serif;}
-
-
-.logo {
-    margin-top: 100px;
-}
-
-/* navbar */
-.navbar {
-    background-color: red;
-    border-color: red;
-}
-
-.subscribe-box {
+.bgimg {
+    background-image: url('img/translate_background.png');
+    height: 100%;
+    background-position: center;
+    background-size: cover;
+    position: relative;
     color: white;
+    font-size: 25px;
 }
 
-
-
-p {
-    font-size: 18px;
-    color: grey;
+h1 {
+    font-size: 50px;
 }
 
-label {
-    font-size: 18px;
+.topleft {
+    position: absolute;
+    top: 0;
+    left: 16px;
 }
 
-/*.btn {*/
-    /*background-color: white;*/
-    /*border: none;*/
-
-/*}*/
-
-
-
-.brand-slogan {
-    color:white;
-
-}
-
-#brand-logo {
-    margin-right: 10px;
-}
-
-
-
-.masthead {
-    min-height: 500px;
-    background-color: #2AB1F2;
-
-    /*background-image: url('img/translate_background.png');*/
-    /*background-repeat: no-repeat;*/
-    /*background-position: top center;*/
-    /*background-size: cover;*/
-
-}
-
-.divider {
-    border-bottom: 0.5px solid lightgrey;
-    padding-top: 40px;
-    padding-bottom: 40px;
-
-}
-
-.custom-divider {
-    border-bottom: 0.5px solid lightgrey;
-    padding-bottom: 40px;
-
-}
-
-
-
-.form-control {
-    /*border: 0;*/
-    border-width: 0 0 2px;
-    border-color: black;
-
-}
-
-.partner-row {
-    margin-top: 20px
-}
-
-#download {
-    background-color: #2AB1F2;
-}
-
-
-.form-control:focus {
-    border-color: inherit;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-}
-
-
-footer {
-    margin-top:20px;
+.bottomleft {
+    position: absolute;
     bottom: 0;
-    width: 100%;
-    min-height: 80px;
-    margin-bottom: 0;
-    line-height: 60px; /* Vertically center the text there */
-    border-top: 0.5px solid lightgrey;
-
+    left: 16px;
 }
 
-
-
-.tracking-in-expand {
-    -webkit-animation: tracking-in-expand 2.0s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
-    animation: tracking-in-expand 2.0s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+.middle {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
 }
 
-
-
+hr {
+    margin: auto;
+    width: 40%;
+}
