--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@ body, html {
 }
 
 .bgimg {
-    background-image: url('img/translate_background.png');
+    background-image: url('img/updated_background.png');
     height: 100%;
     background-position: center;
     background-size: cover;
